--- a/~!.emacs.d/init.org
+++ b/~!.emacs.d/init.org
@@ -857,80 +857,6 @@
 
   #+end_src
 
-* Git
-  #+begin_src emacs-lisp
-    (use-package magit
-      :config
-      (setq transient-default-level 5
-        transient-levels-file  (concat x/etc-dir "transient/levels")
-        transient-values-file  (concat x/etc-dir "transient/values")
-        transient-history-file (concat x/etc-dir "transient/history")
-        magit-revision-show-gravatars '("^Author:     " . "^Commit:     ")
-        magit-diff-refine-hunk t) ; show granular diffs in selected hunk
-      :general
-      (map!
-        "g" '(:ignore t :which-key "Git")
-        "g s" '(magit-status :which-key "status")))
-
-    (use-package magit-gitflow
-      :after magit
-      :hook (magit-mode . turn-on-magit-gitflow))
-
-    (use-package git-timemachine
-      :config
-      (setq git-timemachine-show-minibuffer-details t)
-      (evil-make-overriding-map git-timemachine-mode-map 'normal)
-      (add-hook 'git-timemachine-mode-hook #'evil-normalize-keymaps)
-      )
-
-    (use-package evil-magit
-      :after magit
-      :init
-      (setq evil-magit-state 'normal
-        evil-magit-use-z-for-folds t)
-      :general
-      (general-define-key
-        :states '(normal visual)
-        :keymaps 'magit-mode-map
-        "%" #'magit-gitflow-popup))
-
-    (use-package magit-todos
-      :hook (magit-mode . magit-todos-mode)
-      :config
-      (setq magit-todos-require-colon nil)
-      (define-key magit-todos-section-map "j" nil))
-    ;; (advice-add #'magit-todos-mode :around #'doom*shut-up))
-
-    ;; (use-package magithub
-    ;;   :after magit
-    ;;   :preface
-    ;;   ;; Magithub is not well-behaved, so this needs to be set early
-    ;;   (setq magithub-dir (concat doom-etc-dir "magithub/"))
-    ;;   :init
-    ;;   (setq magithub-clone-default-directory "~/"
-    ;;         magithub-preferred-remote-method 'clone_url)
-    ;;   :config
-    ;;   (unless +magit-hub-enable-by-default
-    ;;     ;; Disable magit by default. Can be enabled through magithub settings popup,
-    ;;     ;; or setting `+magit-hub-enable-by-default'.
-    ;;     (advice-add #'magithub-enabled-p :override #'+magit*hub-enabled-p)
-    ;;     ;; I don't use `magithub-settings--simple' to redefine this because it
-    ;;     ;; changes the order of settings. Obnoxious, but the alternative is even
-    ;;     ;; more so.
-    ;;     (advice-add #'magithub-settings--format-magithub.enabled
-    ;;                 :override #'+magit*hub-settings--format-magithub.enabled))
-    ;;   (when +magit-hub-features
-    ;;     (magithub-feature-autoinject +magit-hub-features)))
-
-    (use-package gitignore-mode)
-
-    (use-package forge
-      :after magit
-      :init
-      (setq forge-database-file (concat x/etc-dir "forge/forge-database.sqlite")))
-
-  #+end_src
-
 * Autocomplete
   #+begin_src emacs-lisp
     (use-package company
@@ -1018,157 +944,6 @@
               ((facep sym)    'ElispFace))))))
 
   #+end_src
-
-* Project Management
-
-** projectile
-   #+begin_src emacs-lisp
-     ;;;###autoload
-     (defun doom-project-name (&optional dir)
-       "Return the name of the current project."
-       (let ((project-root (or (projectile-project-root dir)
-                               (if dir (expand-file-name dir)))))
-         (if project-root
-             (funcall projectile-project-name-function project-root)
-           "-")))
-
-     (use-package projectile
-       :delight '(:eval (concat " " (projectile-project-name)))
-       :commands (projectile-project-root projectile-project-name projectile-project-p)
-       :init
-       (setq
-        projectile-cache-file (concat x/cache-dir "projectile.cache")
-        projectile-known-projects-file (concat x/cache-dir "projectile.projects")
-        projectile-completion-system 'ivy
-        projectile-known-projects-file (expand-file-name "projectile-bookmarks.eld" x/local-dir))
-       :bind-keymap
-       ("s-p" . projectile-command-map)
-       :config
-       (projectile-mode +1))
-
-     (use-package counsel-projectile
-       :config
-       (counsel-projectile-mode)
-       :general
-       (map!
-         "p" '(:ignore t :which-key "Projects")
-         "/" '(counsel-projectile-ag :which-key "find file in project")
-         "p p" '(projectile-switch-project :which-key "Open Project")
-         "p f" '(projectile-find-file :which-key "Find File")))
-
-   #+end_src
-
-** treemacs
-   #+begin_src emacs-lisp
-     ;;;###autoload
-     (defalias 'doom-project-root #'projectile-project-root)
-
-     (defun +treemacs--init ()
-       (require 'treemacs)
-       (let ((origin-buffer (current-buffer)))
-         (cl-letf (((symbol-function 'treemacs-workspace->is-empty?)
-                    (symbol-function 'ignore)))
-           (treemacs--init))
-         (dolist (project (treemacs-workspace->projects (treemacs-current-workspace)))
-           (treemacs-do-remove-project-from-workspace project))
-         (with-current-buffer origin-buffer
-           (let ((project-root (or (doom-project-root) default-directory)))
-             (treemacs-do-add-project-to-workspace
-              (treemacs--canonical-path project-root)
-              (doom-project-name project-root)))
-           (setq treemacs--ready-to-follow t)
-           (when (or treemacs-follow-after-init treemacs-follow-mode)
-             (treemacs--follow)))))
-
-     ;;;###autoload
-     (defun +treemacs/toggle ()
-       "Initialize or toggle treemacs.
-
-     Ensures that only the current project is present and all other projects have
-     been removed.
-
-     Use `treemacs' command for old functionality."
-       (interactive)
-       (require 'treemacs)
-       (pcase (treemacs-current-visibility)
-         (`visible (delete-window (treemacs-get-local-window)))
-         (_ (+treemacs--init))))
-
-     ;;;###autoload
-     (defun +treemacs/find-file (arg)
-       "Open treemacs (if necessary) and find current file."
-       (interactive "P")
-       (let ((origin-buffer (current-buffer)))
-         (+treemacs--init)
-         (with-current-buffer origin-buffer
-           (treemacs-find-file arg))))
-
-     (use-package treemacs
-       :defer t
-       :init
-       (with-eval-after-load 'winum
-         (define-key winum-keymap (kbd "M-0") #'treemacs-select-window))
-       :config
-       (progn
-         (setq treemacs-collapse-dirs              (if (executable-find "python") 3 0)
-           treemacs-deferred-git-apply-delay   0.5
-           treemacs-display-in-side-window     t
-           treemacs-file-event-delay           5000
-           treemacs-file-follow-delay          0.2
-           treemacs-follow-after-init          t
-           treemacs-follow-recenter-distance   0.1
-           treemacs-goto-tag-strategy          'refetch-index
-           treemacs-indentation                2
-           treemacs-indentation-string         " "
-           treemacs-is-never-other-window      nil
-           treemacs-no-png-images              nil
-           treemacs-project-follow-cleanup     nil
-           treemacs-persist-file               (expand-file-name "treemacs-persist" x/local-dir)
-           treemacs-recenter-after-file-follow nil
-           treemacs-recenter-after-tag-follow  nil
-           treemacs-show-hidden-files          t
-           treemacs-silent-filewatch           nil
-           treemacs-silent-refresh             nil
-           treemacs-sorting                    'alphabetic-desc
-           treemacs-space-between-root-nodes   t
-           treemacs-tag-follow-cleanup         t
-           treemacs-tag-follow-delay           1.5
-           treemacs-width                      35)
-
-         ;; The default width and height of the icons is 22 pixels. If you are
-         ;; using a Hi-DPI display, uncomment this to double the icon size.
-         ;;(treemacs-resize-icons 44)
-
-         (treemacs-follow-mode t)
-         (treemacs-filewatch-mode t)
-         (treemacs-fringe-indicator-mode t)
-         (pcase (cons (not (null (executable-find "git")))
-              (not (null (executable-find "python3"))))
-           (`(t . t)
-            (treemacs-git-mode 'extended))
-           (`(t . _)
-            (treemacs-git-mode 'simple))))
-       :general
-       (map!
-         "t" '(:ignore t :which-key "Toggle")
-         "t t" '(+treemacs/toggle :which-key "Treemacs"))
-
-       ;; :bind
-       ;; (:map global-map
-       ;;  ("M-0"       . treemacs-select-window)
-       ;;  ("C-x t 1"   . treemacs-delete-other-windows)
-       ;;  ("C-x t t"   . treemacs)
-       ;;  ("C-x t B"   . treemacs-bookmark)
-       ;;  ("C-x t C-t" . treemacs-find-file)
-       ;;  ("C-x t M-t" . treemacs-find-tag))
-       )
-
-     (use-package treemacs-evil
-       :after treemacs evil)
-
-     (use-package treemacs-projectile
-       :after treemacs projectile)
-   #+end_src
 
 * org-mode
   #+begin_src emacs-lisp
@@ -1493,9 +1268,8 @@
      ;;       :n "t" #'deft-toggle-incremental-search))
    #+end_src
 
-* Writing
-
-** Spell Check
+* Tools
+** Spelling
    #+begin_src emacs-lisp
      (defvar-local +spellcheck-immediately t
        "If non-nil, spellcheck the current buffer upon starting `flyspell-mode'.
@@ -1549,6 +1323,26 @@
 
    #+end_src
 
+** translate
+   #+begin_src emacs-lisp
+     (use-package google-translate
+       :init
+       (setq google-translate-translation-directions-alist
+         '(("en" . "zh-CN") ("zh-CN" . "en")))
+       :config
+       (require 'google-translate-smooth-ui)
+       (map!
+         "xt" 'google-translate-smooth-translate))
+   #+end_src
+
+** ledger
+   #+begin_src emacs-lisp
+     (use-package ledger-mode
+       :mode "\\.journal\\'")
+
+     ;; (use-package flycheck-ledger
+     ;;   :after ledger-mode)
+   #+end_src
 
 ** writeroom-mode
    #+begin_src emacs-lisp
@@ -1573,6 +1367,231 @@
    #+end_src
 
 * Coding
+** git
+   #+begin_src emacs-lisp
+     (use-package magit
+       :config
+       (setq transient-default-level 5
+         transient-levels-file  (concat x/etc-dir "transient/levels")
+         transient-values-file  (concat x/etc-dir "transient/values")
+         transient-history-file (concat x/etc-dir "transient/history")
+         magit-revision-show-gravatars '("^Author:     " . "^Commit:     ")
+         magit-diff-refine-hunk t) ; show granular diffs in selected hunk
+       :general
+       (map!
+         "g" '(:ignore t :which-key "Git")
+         "g s" '(magit-status :which-key "status")))
+
+     (use-package magit-gitflow
+       :after magit
+       :hook (magit-mode . turn-on-magit-gitflow))
+
+     (use-package git-timemachine
+       :config
+       (setq git-timemachine-show-minibuffer-details t)
+       (evil-make-overriding-map git-timemachine-mode-map 'normal)
+       (add-hook 'git-timemachine-mode-hook #'evil-normalize-keymaps)
+       )
+
+     (use-package evil-magit
+       :after magit
+       :init
+       (setq evil-magit-state 'normal
+         evil-magit-use-z-for-folds t)
+       :general
+       (general-define-key
+         :states '(normal visual)
+         :keymaps 'magit-mode-map
+         "%" #'magit-gitflow-popup))
+
+     (use-package magit-todos
+       :hook (magit-mode . magit-todos-mode)
+       :config
+       (setq magit-todos-require-colon nil)
+       (define-key magit-todos-section-map "j" nil))
+     ;; (advice-add #'magit-todos-mode :around #'doom*shut-up))
+
+     ;; (use-package magithub
+     ;;   :after magit
+     ;;   :preface
+     ;;   ;; Magithub is not well-behaved, so this needs to be set early
+     ;;   (setq magithub-dir (concat doom-etc-dir "magithub/"))
+     ;;   :init
+     ;;   (setq magithub-clone-default-directory "~/"
+     ;;         magithub-preferred-remote-method 'clone_url)
+     ;;   :config
+     ;;   (unless +magit-hub-enable-by-default
+     ;;     ;; Disable magit by default. Can be enabled through magithub settings popup,
+     ;;     ;; or setting `+magit-hub-enable-by-default'.
+     ;;     (advice-add #'magithub-enabled-p :override #'+magit*hub-enabled-p)
+     ;;     ;; I don't use `magithub-settings--simple' to redefine this because it
+     ;;     ;; changes the order of settings. Obnoxious, but the alternative is even
+     ;;     ;; more so.
+     ;;     (advice-add #'magithub-settings--format-magithub.enabled
+     ;;                 :override #'+magit*hub-settings--format-magithub.enabled))
+     ;;   (when +magit-hub-features
+     ;;     (magithub-feature-autoinject +magit-hub-features)))
+
+     (use-package gitignore-mode)
+
+     (use-package forge
+       :after magit
+       :init
+       (setq forge-database-file (concat x/etc-dir "forge/forge-database.sqlite")))
+
+   #+end_src
+
+** Project Management
+
+*** projectile
+    #+begin_src emacs-lisp
+      ;;;###autoload
+      (defun doom-project-name (&optional dir)
+        "Return the name of the current project."
+        (let ((project-root (or (projectile-project-root dir)
+                                (if dir (expand-file-name dir)))))
+          (if project-root
+              (funcall projectile-project-name-function project-root)
+            "-")))
+
+      (use-package projectile
+        :delight '(:eval (concat " " (projectile-project-name)))
+        :commands (projectile-project-root projectile-project-name projectile-project-p)
+        :init
+        (setq
+         projectile-cache-file (concat x/cache-dir "projectile.cache")
+         projectile-known-projects-file (concat x/cache-dir "projectile.projects")
+         projectile-completion-system 'ivy
+         projectile-known-projects-file (expand-file-name "projectile-bookmarks.eld" x/local-dir))
+        :bind-keymap
+        ("s-p" . projectile-command-map)
+        :config
+        (projectile-mode +1))
+
+      (use-package counsel-projectile
+        :config
+        (counsel-projectile-mode)
+        :general
+        (map!
+          "p" '(:ignore t :which-key "Projects")
+          "/" '(counsel-projectile-ag :which-key "find file in project")
+          "p p" '(projectile-switch-project :which-key "Open Project")
+          "p f" '(projectile-find-file :which-key "Find File")))
+
+    #+end_src
+
+*** treemacs
+    #+begin_src emacs-lisp
+      ;;;###autoload
+      (defalias 'doom-project-root #'projectile-project-root)
+
+      (defun +treemacs--init ()
+        (require 'treemacs)
+        (let ((origin-buffer (current-buffer)))
+          (cl-letf (((symbol-function 'treemacs-workspace->is-empty?)
+                     (symbol-function 'ignore)))
+            (treemacs--init))
+          (dolist (project (treemacs-workspace->projects (treemacs-current-workspace)))
+            (treemacs-do-remove-project-from-workspace project))
+          (with-current-buffer origin-buffer
+            (let ((project-root (or (doom-project-root) default-directory)))
+              (treemacs-do-add-project-to-workspace
+               (treemacs--canonical-path project-root)
+               (doom-project-name project-root)))
+            (setq treemacs--ready-to-follow t)
+            (when (or treemacs-follow-after-init treemacs-follow-mode)
+              (treemacs--follow)))))
+
+      ;;;###autoload
+      (defun +treemacs/toggle ()
+        "Initialize or toggle treemacs.
+
+      Ensures that only the current project is present and all other projects have
+      been removed.
+
+      Use `treemacs' command for old functionality."
+        (interactive)
+        (require 'treemacs)
+        (pcase (treemacs-current-visibility)
+          (`visible (delete-window (treemacs-get-local-window)))
+          (_ (+treemacs--init))))
+
+      ;;;###autoload
+      (defun +treemacs/find-file (arg)
+        "Open treemacs (if necessary) and find current file."
+        (interactive "P")
+        (let ((origin-buffer (current-buffer)))
+          (+treemacs--init)
+          (with-current-buffer origin-buffer
+            (treemacs-find-file arg))))
+
+      (use-package treemacs
+        :defer t
+        :init
+        (with-eval-after-load 'winum
+          (define-key winum-keymap (kbd "M-0") #'treemacs-select-window))
+        :config
+        (progn
+          (setq treemacs-collapse-dirs              (if (executable-find "python") 3 0)
+            treemacs-deferred-git-apply-delay   0.5
+            treemacs-display-in-side-window     t
+            treemacs-file-event-delay           5000
+            treemacs-file-follow-delay          0.2
+            treemacs-follow-after-init          t
+            treemacs-follow-recenter-distance   0.1
+            treemacs-goto-tag-strategy          'refetch-index
+            treemacs-indentation                2
+            treemacs-indentation-string         " "
+            treemacs-is-never-other-window      nil
+            treemacs-no-png-images              nil
+            treemacs-project-follow-cleanup     nil
+            treemacs-persist-file               (expand-file-name "treemacs-persist" x/local-dir)
+            treemacs-recenter-after-file-follow nil
+            treemacs-recenter-after-tag-follow  nil
+            treemacs-show-hidden-files          t
+            treemacs-silent-filewatch           nil
+            treemacs-silent-refresh             nil
+            treemacs-sorting                    'alphabetic-desc
+            treemacs-space-between-root-nodes   t
+            treemacs-tag-follow-cleanup         t
+            treemacs-tag-follow-delay           1.5
+            treemacs-width                      35)
+
+          ;; The default width and height of the icons is 22 pixels. If you are
+          ;; using a Hi-DPI display, uncomment this to double the icon size.
+          ;;(treemacs-resize-icons 44)
+
+          (treemacs-follow-mode t)
+          (treemacs-filewatch-mode t)
+          (treemacs-fringe-indicator-mode t)
+          (pcase (cons (not (null (executable-find "git")))
+               (not (null (executable-find "python3"))))
+            (`(t . t)
+             (treemacs-git-mode 'extended))
+            (`(t . _)
+             (treemacs-git-mode 'simple))))
+        :general
+        (map!
+          "t" '(:ignore t :which-key "Toggle")
+          "t t" '(+treemacs/toggle :which-key "Treemacs"))
+
+        ;; :bind
+        ;; (:map global-map
+        ;;  ("M-0"       . treemacs-select-window)
+        ;;  ("C-x t 1"   . treemacs-delete-other-windows)
+        ;;  ("C-x t t"   . treemacs)
+        ;;  ("C-x t B"   . treemacs-bookmark)
+        ;;  ("C-x t C-t" . treemacs-find-file)
+        ;;  ("C-x t M-t" . treemacs-find-tag))
+        )
+
+      (use-package treemacs-evil
+        :after treemacs evil)
+
+      (use-package treemacs-projectile
+        :after treemacs projectile)
+    #+end_src
+
 ** snippets
    #+begin_src emacs-lisp
      (use-package yasnippet)
@@ -1955,6 +1974,17 @@
      (use-package swift-mode)
    #+end_src
 
+** elm
+   #+begin_src emacs-lisp
+     (use-package elm-mode
+       :config
+       (setq elm-format-on-save t))
+
+     (use-package flycheck-elm
+       :after elm-mode
+       :config (add-to-list 'flycheck-checkers 'elm nil #'eq))
+
+   #+end_src
 
 ** docker
    Editing =Dockerfile=.
@@ -1966,3 +1996,5 @@
    #+begin_src emacs-lisp
      (use-package docker)
    #+end_src
+
+
